# Bernie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: release.yml  rust.yml
migrations/: 20220125180510_init.down.sql  20220125180510_init.up.sql
src/: commands.rs  main.rs
src/commands/: meta.rs  mod.rs  playbacks.rs  sounds.rs
src/soundboard/: backend.rs  commands.rs  database.rs  mod.rs  types.rs
