[package]
name = "bernie"
version = "0.1.0"
edition = "2021"

[features]
default = ["database"]
database = ["sqlx"]

[dependencies]
tokio = { version = "~1.15", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.19"
dotenv = "0.15.0"
url = "2.2.2"
async-trait = "0.1.52"
anyhow = "1.0.53"
poise = { git = "https://github.com/kangalioo/poise.git" }
songbird = { version = "0.2.1", features = ["yt-dlp"] }
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.sqlx]
version = "0.5.10"
features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"]
optional = true

[dependencies.serenity]
#version = "0.10.10"

git = "https://github.com/serenity-rs/serenity.git"
branch = "next"

default-features = false
features = [
    # default features
    "builder",
    "cache",
    "client",
    #    "framework",
    "gateway",
    "http",
    "model",
    #    "standard_framework",
    "utils",
    "rustls_backend",
    # extra features
    "voice",
    "unstable_discord_api",
]
