[package]
name = "bernie"
version = "0.1.0"
edition = "2021"

[features]
default = ["database"]
database = ["sqlx"]

[dependencies]
tokio = { version = "~1.15", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
] }
chrono = "0.4.19"
dotenv = "0.15.0"
async-trait = "0.1.52"
anyhow = "1.0.53"
poise = { git = "https://github.com/kangalioo/poise.git" }
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0"

[dependencies.sqlx]
version = "0.5.10"
features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "offline"]
optional = true

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "next"
features = ["yt-dlp"]

[dependencies.serenity]
version = "0.10.10"

default-features = false
features = [
    # default features
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    # extra features
    "voice",
    "unstable_discord_api",
]

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
